# api/stream-portfolio/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.3
 info:
   title: Portfolio Ingestion API
   description: Ingestion Saga for Portfolio
@@ -12,6 +12,9 @@ servers:
     description: The server
 tags:
 - name: portfolios
+  description: Portfolios API
+- name: integrations
+  description: Integration API
 paths:
   ###############################################
   ## Portfolio
@@ -19,7 +22,7 @@ paths:
   /portfolios:
     post:
       tags:
-        - portfolio
+        - portfolios
       summary: Create Wealth of Portfolios
       operationId: createPortfolioBundlee
       requestBody:
@@ -38,6 +41,37 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/WealthBundle'
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  ###############################################
+  ## Integration
+  ###############################################
+  /integration-api/v1/regions/batch:
+    post:
+      tags:
+        - integration
+      summary: Create Portfolio Regions Batch
+      operationId: createPortfiolioRegionsBatch
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/RegionBundle'
+      responses:
+        200:
+          description: The created region and all their objects with internal ids
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RegionBundle'
         default:
           description: Error
           content:
